--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,53 @@
 <html>
 <head>
   <title>Blocipedia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <div class="container">
+      <ul class="nav nav-tabs">
+        <% if current_user %>
+          Hello <%= current_user.email %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <li><%= link_to "Blocipedia", root_path %></li>
+        <% end %>
+        <div class="nav navbar-nav navbar-right">
+          <% if current_user %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello <%= current_user.email %>!<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+                  <li><%= link_to "Change your password?", edit_user_registration_path %></li>
+                </ul>
+              </li>
+            <% else %>
+              <%= link_to "Sign In", new_user_session_path %> or
+              <%= link_to "Sign Up", new_user_registration_path %>
+            <% end %>
+        </div>   
+    </ul>
 
-<%= yield %>
+  <% if flash[:notice] %>
+    <div class="alert alert-success">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:notice] %>
+    </div>
+    <% elsif flash[:error] %>
+    <div class="alert alert-danger">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:error] %>
+    </div>
+    <% elsif flash[:alert] %>
+    <div class="alert-warning">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <%= flash[:alert] %>
+    </div>
+  <% end %>
 
+  <%= yield %>
+  </div>
 </body>
 </html>
