--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @wiki.title %></h1>
 <p><%= @wiki.body %></p>
 <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+<%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
