--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,4 +1,7 @@
-<h1><%= @wiki.title %></h1>
-<p><%= @wiki.body %></p>
-<%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-<%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+<div class="media">
+	<h1><%= @wiki.title %></h1>
+	<p><%= @wiki.body %></p>
+	<%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+	<%= link_to "Delete", @wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' } %>
+	<small>Post created <%= time_ago_in_words(@wiki.created_at)%> ago. Last updated on <%= @wiki.updated_at%>.</small>
+</div>
