--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-	<h1>Blocipedia</h1>
-	<p class="lead">Your wiki.</p>
+	<h1 align="center">Blocipedia</h1>
+	<p class="lead" align="center">Your wiki.</p>
 </div>
