--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class="text-center">
+<h2>Sign Up For A Free Blocipedia Account</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -27,3 +28,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
