--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,2 +1,3 @@
-<h1>Charges#create</h1>
-<p>Find me in app/views/charges/create.html.erb</p>
+<h2>Thanks, you paid <strong>$15.00</strong> to update to a Premium Membership!</h2>
+<p>You now can create, edit, and delete private wikis.</p>
+
