--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,5 +1,6 @@
  <%= form_tag charges_path do %>
-   <h4>Click the button!</h4>
+   <h4>Sign up for a Premium Account!</h4>
+   <h5>Create Private Wikis Only Other Premium Users Can See</h5>
    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="A month's subscription"
