--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
                   <li><%= link_to "Change your password?", edit_user_registration_path %></li>
+                  <li><%= link_to "Upgrade your account", new_charge_path %></li>
                 </ul>
               </li>
             <% else %>
