refactor wikis#index

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,10 +1,13 @@
-<h1>All Wikis</h1>
-<% @wikis.each do |wiki| %>
-	<div class="media">
-		<div class="media-body">
-			<h4 class="media-heading">
-				<%= link_to wiki.title, wiki %>
-			</h4>
+<div class="container">
+<h1 class="text-center">All Wikis</h1>
+	<%= link_to "Create A New Wiki", new_wiki_path, class: 'btn btn-success' %>
+	<% @wikis.each do |wiki| %>
+		<div class="media">
+			<div class="media-body">
+				<h4 class="media-heading">
+					<%= link_to wiki.title, wiki %>
+				</h4>
+			</div>
 		</div>
-	</div>
-<% end %>
+	<% end %>
+</div>
