refactor default user role method

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,5 +7,7 @@
 		<h2>Create and Edit Wikis Now</h2>
 		<h2>Sign Up For An Account Today</h2>
 		<%= button_to "Sign Up", new_user_registration_path, :class => "btn btn-lg btn-primary", :method => :get %>
+	</br>
+		<%= button_to "Log In", new_user_session_path, :class => "btn btn-lg btn-primary", :method => :get %>
 	</div>
 </div>
