wip downgrade account from premium to standard

--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -3,6 +3,6 @@
    <h5>Create Private Wikis Only Other Premium Users Can See</h5>
    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A month's subscription"
+          data-description="Blocipedia Premium Membership"
           data-amount="1500"></script>
  <% end %>
