--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,13 +42,10 @@
   <p>You're currently a <em><%= current_user.role.capitalize %> Member</em>.</p>
 <% end %>
 
-<% if current_user.premium? %>
-  <p>Want to go back to your standard account? <%= link_to "Click here", edit_user_registration_path(:role => "standard" ), method: :put, :confirm => "Are you sure you want to go back?" %></p>
-<% else %>
-<% end %>
+<h3>Downgrade Or Cancel Account</h3>
 
-<h3>Cancel my account</h3>
+<p><%= button_to "Cancel My Blocipedia Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Downgrade To Standard Account", charge_path, :controller => "charges", :action => "destroy", data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
