--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -46,6 +46,8 @@
 
 <p><%= button_to "Cancel My Blocipedia Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<p><%= button_to "Downgrade To Standard Account", charge_path, :controller => "charges", :action => "destroy", data: { confirm: "Are you sure?" }, method: :delete %></p>
+@wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' }
+
+<p><%= link_to "Downgrade To Standard Account", charge_path, @customer, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to downgrade your account?' } %></p>
 
 <%= link_to "Back", :back %>
