--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,11 +43,9 @@
 <% end %>
 
 <h3>Downgrade Or Cancel Account</h3>
-
+<p><%= button_to "Downgrade To Standard Account", charge_path(current_user.id), data: { confirm: 'Are you sure you want to downgrade your account?'}, method: :update %></p>
 <p><%= button_to "Cancel My Blocipedia Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-@wiki, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this wiki?' }
 
-<p><%= link_to "Downgrade To Standard Account", charge_path, @customer, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to downgrade your account?' } %></p>
 
 <%= link_to "Back", :back %>
