--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.role == 'admin' || current_user.role == 'premium' %>
     <div class="form-group">
-      <%= label :private, class: 'checkbox' do %>
-      <%= check_box :private %> Private wiki
+      <%= f.label :private, class: 'checkbox' do %>
+      <%= f.check_box :private %> Private wiki
     <% end %>
 	</div>
 <% end %>
