add private checkbox to wikis#edit

--- a/app/views/wikis/_public_private_button.html.erb
+++ b/app/views/wikis/_public_private_button.html.erb
@@ -1,4 +1,4 @@
-<% if wiki.public == true %>
+<% if @wiki.public == true %>
 	<button type="button" class="btn btn-xs btn-primary">Public Wiki</button>
 <% else %>
 	<button type="button" class="btn btn-xs btn-success">Private Wiki</button>
