--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -22,16 +22,13 @@
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
-       <% if current_user.role == 'admin' || current_user.role == 'premium' %>
-      <div class="form-group">
-        <%= f.label :public do %>
-        <%= f.check_box :public %> Private wiki
-      <% end %>
-       </div>
-      <% else %>
-        <p>This wiki is <i>public</i></p>
-      <% end %>
+        <% if current_user.role == 'admin' || current_user.role == 'premium' %>
+        <div class="form-group">
+          <%= f.check_box :public, {}, false, true %> Private wiki
+        </div>
+  <% end %> 
+
     <% end %>
+
    </div>
  </div>
-
