--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,7 @@
 <% end %>
 
 <h3>Downgrade Or Cancel Account</h3>
-<p><%= button_to "Downgrade To Standard", user_premium_to_standard_path(current_user), data: { confirm: 'Are you sure?' }, method: :post %></p>
+<p><%= button_to "Downgrade To Standard", user_premium_to_standard_path(current_user), data: { confirm: 'Are you sure? Private wikis will become Public.' }, method: :post %></p>
 <p><%= button_to "Cancel My Blocipedia Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
