--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -22,6 +22,11 @@
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
+        <% if current_user.role == 'admin' || current_user.role == 'premium' %>
+          <div class="form-group">
+            <%= f.check_box :public, {}, false, true %> Private wiki
+          </div>
+        <% end %> 
      <% end %>
    </div>
  </div>
