--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -22,7 +22,7 @@
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
        </div>
-        <% if current_user.role == 'admin' || current_user.role == 'premium' %>
+        <% unless current_user.standard? %>
           <div class="form-group">
             <%= f.check_box :public, {}, false, true %> Private wiki
           </div>
