--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -21,12 +21,12 @@
        </div>
        <div class="form-group">
          <%= f.submit "Save", class: 'btn btn-success' %>
+         <%= link_to "Add Collaborator", new_wiki_collaborator_path(@wiki), class: 'btn btn-primary' %>
        </div>
         <% unless current_user.standard? %>
           <div class="form-group">
             <%= f.check_box :public, {}, false, true %> Private wiki
           </div>
-          <%= link_to "Add Collaborator", collaborations_new_path, class: 'btn btn-xs btn-success' %>
         <% end %> 
     <% end %>
 
