--- a/app/views/collaborators/new.html.erb
+++ b/app/views/collaborators/new.html.erb
@@ -9,18 +9,17 @@
 			</tr>
 		</thead>
 		<tbody>	
-			<%= form_for [@wiki, @collaborator] do |f| %>
 			<div class="field">
 			<% @user.each do |user| %>
+				
 			    <div class="form-group">
 			    	<tr>
 			    		<td><%= user.name %></td>
 			    		<td><%= user.email %></td>
-			    		<td><%= f.submit "Add Collaborator", class: 'btn btn-primary' %></td>
+			    		<td><%= button_to "Add Collaborator", wiki_collaborators_path(@wiki.id), params: { user_id: user.id } %></td>
 			    	</tr>
 			    </div>
-			</div>
-			<% end %> 
+			</div> 
 			<% end %>
 		</tbody>
 	</table> 
